{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "6f62dcb6-7e72-4b4f-a05d-076711c826a9",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "16232a32-4c57-4387-a97d-0fb5db353f1b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "464fe200-37eb-4f90-9df9-86f1282123ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pinch",
                    "type": "Value",
                    "id": "e69b2ccf-bec1-4453-b728-b75058609319",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dcb0c51c-2692-416b-9610-01ded913b996",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1b5517e-3a87-4a8b-8183-94367547e751",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c42eb60-d2cd-4cfa-8836-c9f578ce3dfe",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": []
        }
    ]
}